# designpvp

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: lint.yml
backend/: Dockerfile.local  allauth-schema.yaml  gunicorn.conf.py  mypi.ini  mypy.ini  pyproject.toml
backend/backend/: adapter.py  permissions.py  settings.py  urls.py
backend/backend/fixtures/: devsetup.json  whatever.json
backend/backend/management/commands/: promote_latest_user.py
backend/config/: serializers.py  urls.py  views.py
backend/events/: admin.py  models.py  serializers.py  urls.py  views.py
backend/events/migrations/: 0001_initial.py  0002_team_users.py  0003_alter_team_event.py
backend/polls/: admin.py  models.py  tests.py  views.py
backend/polls/migrations/: 0001_initial.py
backend/polls/static/polls/: style.css
backend/polls/templates/polls/: detail.html  index.html  results.html
backend/profiles/: admin.py  models.py  serializers.py  urls.py  views.py
backend/profiles/migrations/: 0001_initial.py
backend/snippets/: models.py  permissions.py  serializers.py  urls.py  views.py
backend/snippets/migrations/: 0001_initial.py  0002_rename_lineos_snippet_linenos.py  0003_snippet_highlighted_snippet_owner.py
backend/templates/admin/: base_site.html
frontend/: .prettierrc  Dockerfile.local  README.md  allauth-schema-script.py  allauth-schema.yaml  eslint.config.mjs  generate-allauth.sh  jest.setup.js  orval.config.js  orval.config.ts  package-lock.json  package.json
frontend/api/: allauth.ts  backend.ts
frontend/app/: layout.tsx  page.tsx  (+2 more)
(+83 files in other folders)
